# ai-devtools

./: .gitignore  .gitmodules  Makefile  README.md  docstringify.py  pyproject.toml
scripts/: docstringify.py
src/devtools/: config.py  docstringer.py
src/devtools/lang_processor/: lang_processor_interface.py  python.py
src/devtools/llm/: client_interface.py  factory.py  openai.py  openai_client.py
tests/: conftest.py  utils.py
tests/lang_processor/: test_python.py
